--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,37 +1,7 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
   --font-mono: "public sans", "sans-serif"
 
-    --primary-glow: conic-gradient(from 180deg at 50% 50%,
-      #16abff33 0deg,
-      #0885ff33 55deg,
-      #54d6ff33 120deg,
-      #0071ff33 160deg,
-      transparent 360deg);
-  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
-      rgba(255, 255, 255, 0));
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(#00000080,
-      #00000040,
-      #00000030,
-      #00000020,
-      #00000010,
-      #00000010,
-      #00000080);
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-
   /** new **/
-
-
-
-
   --responsive-media-min-width: 800px;
   --menu-mobile-height: 60px;
   --menu-desktop-height: 144px;
@@ -57,7 +27,7 @@
   --blueOrg4: #293473;
 
   --greenfont1: #2fa09d;
-  --greenfont2: #185f2b;
+  --greenfont2: #126634;
   
   --greenfont3: #338623;
 
@@ -70,8 +40,8 @@
   --brown1: #553e28;
   --brown2: #553328;
 
-  --fontSizeM: 16px;
-  --fontSizeL: 24px;
+  --fontSizeM: 18px;
+  --fontSizeL: 26px;
 
 }
 
@@ -109,17 +79,17 @@ h2 {
 /* JM Responsive*/
 
 body {
-  font-size: 16px;
+  font-size: 17px;
 }
 
 @media (min-width: 800px) {
   body {
-    font-size: 16px;
+    font-size: 18px;
   }
 
   :root {
-    --fontSizeM: 18px;
-    --fontSizeL: 30px;
+    --fontSizeM: 19px;
+    --fontSizeL: 32px;
   }
 
 }
