--- a/src/app/css/sectionHowWeWork.module.css
+++ b/src/app/css/sectionHowWeWork.module.css
@@ -35,6 +35,7 @@ section.section9 h2 {
 
 .firstRow {
   padding: 2em 1em 0;
+  font-size: 16px;
   display: flex;
   text-align: center;
   flex-direction: column;
