--- a/src/app/css/setionAMPBMembers.module.css
+++ b/src/app/css/setionAMPBMembers.module.css
@@ -118,7 +118,7 @@ section.section3 h2 {
   position: absolute;
   top: 27%;
   left: 18%;
-  font-size: 14px;
+  font-size: 7px;
   
 }
 
@@ -226,6 +226,11 @@ section.section3 h2 {
     background-color: var(--blueOrg4);
     transform: rotate(-45deg);
     transform-origin: right;
+  }
+
+  .orgs {
+    font-size: 14px;
+    
   }
 
   .org9::after {
