--- a/src/app/css/setionAMPBMembers.module.css
+++ b/src/app/css/setionAMPBMembers.module.css
@@ -6,11 +6,13 @@ section.section3 {
   position: relative;
   background-blend-mode: multiply;
   background-image: url(../../../public/images/carton2.png);
+
+  --map-line: 1px;
 }
 
 section.section3 h2 {
   border-radius: 2em;
-  padding: 0.5em 1em;
+  padding: 0.2em 1em;
   background-color: var(--greenfont2);
   border-radius: 3em;
   width: fit-content;
@@ -26,7 +28,7 @@ section.section3 h2 {
 }
 
 .mapTextMobile {
-  padding: 0.5em 0;
+  padding: 0.5em 1em;
 }
 
 .totalScreenBackgroung {
@@ -117,7 +119,9 @@ section.section3 h2 {
   position: absolute;
   top: 27%;
   left: 18%;
-  font-size: 9px;
+  font-size: 10px;
+
+  font-weight: bold;
   color: var(--blueOrg4);
 
 }
@@ -133,9 +137,10 @@ section.section3 h2 {
 }
 
 .leftLabelLine {
+
   width: 11vw;
   display: inline-block;
-  border-top: 2px solid var(--blueOrg4);
+  border-top: var(--map-line) solid var(--blueOrg4);
   position: relative;
   height: 100%;
   margin: 0 2px;
@@ -195,7 +200,7 @@ section.section3 h2 {
   width: 0vw;
   height: 2.5em;
   border-top: 0;
-  border-left: 2px solid var(--blueOrg4);
+  border-left: var(--map-line) solid var(--blueOrg4);
 }
 
 .orgN4 {
@@ -237,7 +242,7 @@ section.section3 h2 {
 
 .orgN6 {
   top: 77%;
-  left: 48%;
+  left: 47.5%;
   width: 2%;
   height: 2%;
 }
@@ -270,9 +275,9 @@ section.section3 h2 {
 .orgN7 .leftLabelLine {
   width: 0vw;
   width: 0vw;
-  height: 11em;
+  height: 9em;
   border-top: 0;
-  border-left: 2px solid var(--blueOrg4);
+  border-left: var(--map-line) solid var(--blueOrg4);
 }
 
 .orgN8 {
@@ -292,14 +297,14 @@ section.section3 h2 {
 .orgN8 .leftLabelLine {
   width: 0vw;
   width: 0vw;
-  height: 8em;
+  height: 7em;
   border-top: 0;
-  border-left: 2px solid var(--blueOrg4);
+  border-left: var(--map-line) solid var(--blueOrg4);
 }
 
 .orgN9 {
-  top: 66%;
-  left: 40%;
+  top: 67%;
+  left: 41%;
   width: 2%;
   height: 2%;
 
@@ -313,18 +318,18 @@ section.section3 h2 {
 
 .orgN9 .nameWidth {
   white-space: normal;
-  min-width: 16em;
+  min-width: 14em;
   text-align: right;
 }
 
 .orgN9 .leftLabelLine {
-  width: 11vw;
+  width: 8vw;
 }
 
 
 .orgN10 {
-  top: 68%;
-  left: 41%;
+  top: 67%;
+  left: 42.5%;
   width: 2%;
   height: 2%;
 
@@ -341,9 +346,9 @@ section.section3 h2 {
 .orgN10 .leftLabelLine {
   width: 0vw;
   width: 0vw;
-  height: 4em;
+  height: 3em;
   border-top: 0;
-  border-right: 2px solid var(--blueOrg4);
+  border-right: var(--map-line) solid var(--blueOrg4);
 }
 
 .orgN10 .nameWidth {
@@ -354,19 +359,13 @@ section.section3 h2 {
 
 
 @media (min-width: 800px) {
-  .org10::after {
-    top: -2.5em;
-    right: -1em;
-    width: 3em;
-    height: 2px;
-    background-color: var(--blueOrg4);
-    transform: rotate(-45deg);
-    transform-origin: right;
+  section.section3 {
+    --map-line: 2px;
   }
 
   .orgs {
-    font-size: 14px;
-
+    font-size: 16px;
+    font-weight: bold;
   }
 
 
@@ -384,11 +383,20 @@ section.section3 h2 {
 
   section.section3 h2 {
     position: absolute;
+    white-space: nowrap;
     z-index: 2;
     margin: 0;
     top: 0.5em;
     left: 50%;
     transform: translate(-50%, 0);
+  }
+
+  .orgN10 .leftLabelLine {
+    height: 4em;
+  }
+
+  .orgN9 .nameWidth {
+    min-width: 16em;
   }
   
 }
