--- a/src/app/css/langSwitch.module.css
+++ b/src/app/css/langSwitch.module.css
@@ -4,6 +4,7 @@
   padding: 0 0.2em;
 }
 
+
 .link {
   display: flex;
   line-height: 1.5em;
@@ -14,6 +15,7 @@
   display: flex;
   position: relative;
 }
+
 
 .lngSwitcher button {
   align-items: center;
@@ -46,4 +48,9 @@
   top: 100%;
   flex-direction: column;
   background-color: wheat;
+}
+
+
+.lngSwitcher ol.langListHidden {
+  display: none;
 }
