--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,8 @@
   --orange2: #cf5928;
   --orange3: #f7941c;
 
+  --error-red: #A52424;
+
   --body-background-color: #fcf9ee;
   --brown1: #553e28;
   --brown2: #553328;
