--- a/src/app/css/sectionQuejas.module.css
+++ b/src/app/css/sectionQuejas.module.css
@@ -17,7 +17,7 @@ section.sectionQuejas {
   padding: 2em;
   border-radius: 1.5em;
   width: 15em;
-  height: max-content;
+  height: fit-content;
 }
 
 .sectionQuejas dialog::backdrop {
@@ -31,6 +31,8 @@ section.sectionQuejas {
   width: 100%;
   height: 100%;
   justify-content: space-evenly;
+
+  height: fit-content;
 }
 
 .dialogContent svg{
