--- a/src/app/css/sectionQuejas.module.css
+++ b/src/app/css/sectionQuejas.module.css
@@ -121,12 +121,16 @@ section.sectionQuejas {
   min-height: 5em;
 }
 
+.sectionQuejas textarea, .sectionQuejas input, .sectionQuejas select {
+  padding: 0.5em;
+}
+
 .control {
   display: flex;
   flex-direction: row;
   text-align: left;
 
-  align-items: flex-start;
+  align-items: center;
   padding: 0.4em 0;
 }
 
