--- a/src/app/css/setion5.module.css
+++ b/src/app/css/setion5.module.css
@@ -42,7 +42,7 @@ section.section5 h2 {
 
 .green_card {
   padding: 1em 0.7em;
-  background-color: #b0d673;
+  background-color: #bedc8e;
   border-radius: 2em;
   width: fit-content;
   margin: auto;
