--- a/src/app/css/setion7.module.css
+++ b/src/app/css/setion7.module.css
@@ -67,6 +67,11 @@ section.section7 {
 
 }
 
+
+.alignRelatice {
+  position: relative;
+}
+
 .deerDecor {
   position: absolute;
   aspect-ratio: 163/239;
