--- a/src/app/css/sectionBoard.module.css
+++ b/src/app/css/sectionBoard.module.css
@@ -19,7 +19,7 @@ section.sectionBoard h2 {
 
 section.sectionBoard h3 {
   color: var(--body-background-color);
-    filter: drop-shadow(0 2px 2px #222);
+  filter: drop-shadow(0 2px 2px #222);
 }
 
 .totalScreenBackgroung {
@@ -40,9 +40,14 @@ section.sectionBoard h3 {
   z-index: 3;
   position: relative;
   flex-wrap: wrap;
-  gap: 1em;
+  gap: 1.3em;
   justify-content: center;
   padding: 0 1em;
+
+}
+
+.baordList p {
+  font-size: 16px;
 
 }
 
@@ -114,14 +119,30 @@ section.sectionBoard h3 {
 
 .hojaDecor {
   position: absolute;
-    aspect-ratio: 238/165;
-    height: 5em;
-    bottom: 0;
-    left: -3em;
-    z-index: 0;
-    background-size: contain;
-    background-repeat: no-repeat;
+  aspect-ratio: 238/165;
+  height: 5em;
+  bottom: 0;
+  left: -3em;
+  z-index: 0;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-image: url(../../../public/images/hoja1.png);
+}
+
+
+.hojasDecor2 {
+  position: absolute;
+  aspect-ratio: 238/165;
+
+  height: 5em;
+  bottom: -0.6em;
+  right: -2.5em;
+  z-index: 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url(../../../public/images/hojas8.png);
+  transform: rotate(116deg);
+
 }
 
 .hojasDecor {
@@ -152,9 +173,38 @@ section.sectionBoard h3 {
 
 }
 
+.hojasDecor3 {
+  position: absolute;
+  aspect-ratio: 199/295;
+  height: 7.5em;
+  top: -0.8em;
+  left: 0.5em;
+  z-index: -1;
+  background-size: contain;
+  background-repeat: no-repeat;
+  transform: scale(-1, 1) rotate(45deg);
+  background-image: url(../../../public/images/hojas1.png);
+
+}
+
+.hojasDecor4 {
+  position: absolute;
+  aspect-ratio: 445/376;
+  height: 6em;
+  top: 3.3em;
+  left: -2em;
+  z-index: -1;
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  transform: scale(-1) rotate(91deg);
+  background-image: url(../../../public/images/hojas12.png);
+
+}
+
 
 .personText {
-  max-height: 10em; 
+  max-height: 10em;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -164,7 +214,7 @@ section.sectionBoard h3 {
 }
 
 
-.sectionBoard  button {
+.sectionBoard button {
   border: none;
   margin: 1em 1em 1em auto;
   background-color: var(--orange1);
